--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href= "./styles.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href= "styles.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -21,22 +21,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class=" nav-item">
-                  <a id="link" class="nav-link active" href="#photo">PERSONAL INFO</a>
+                  <a id="link" class="nav-link active badge badge-danger text-white" style="margin-right: 5px;" href="#photo">PERSONAL INFO</a>
                 </li>
                 <li class="nav-item">
-                  <a id="link" class="nav-link active" href="#skill">SKILLS</a>
+                  <a id="link" class="nav-link active badge badge-danger text-white" style="margin-right: 5px;" href="#skill">SKILLS</a>
                 </li>
                 <li class="nav-item">
-                  <a id="link" class="nav-link active" href="#edu">EDUCATION</a>
+                  <a id="link" class="nav-link active badge badge-danger text-white" style="margin-right: 5px;" href="#edu">EDUCATION</a>
                 </li>
                 <li class="nav-item">
-                  <a id="link" class="nav-link active" href="#proj">PROJECTS</a>
+                  <a id="link" class="nav-link active badge badge-danger text-white" style="margin-right: 5px;" href="#proj">PROJECTS</a>
                 </li>
                 <li class="nav-item">
-                  <a id="link" class="nav-link active" href="#wk">WORK</a>
+                  <a id="link" class="nav-link active badge badge-danger text-white" style="margin-right: 5px;" href="#wk">WORK</a>
                 </li>
                 <li class="nav-item">
-                  <a id="link" class="nav-link active" href="#act">ACTIVITIES</a>
+                  <a id="link" class="nav-link active badge badge-danger text-white" href="#act">ACTIVITIES</a>
                 </li>
               </ul>
             </div>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12 text-center upper">
+            <div class="col-lg-12 text-center upper p-3 mb-2 bg-secondary text-white">
                 <h3 id="info">Adriana Margarita Perez Carrillo</h3>
                 <p>
                 nanyperezcarrillo@hotmail.com
